# mxd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
admin/: admin.py
docs/cpp/: README.md  kepler.cpp  kepler.hpp
docs/technical-reports/mxd-basic-concepts/: .gitignore  mxd-basic-concepts.tex
src/: CMakeLists.txt  color.cpp  color.hpp  color.t.cpp  duration.cpp  duration.hpp  duration.t.cpp  ellipse.cpp  ellipse.hpp  ellipse.t.cpp  geometry.cpp  geometry.hpp  geometry.t.cpp  line.cpp  line.hpp  line.t.cpp  linspace.cpp  linspace.hpp  linspace.t.cpp  mxd.cpp  mxd.hpp  mxd.t.cpp  program.cpp  program.hpp  program.t.cpp  shader.cpp  shader.hpp  shader.t.cpp  shader_program.cpp  shader_program.hpp  shader_program.t.cpp  time_point.cpp  time_point.hpp  time_point.t.cpp  utilities.cpp  utilities.hpp  utilities.t.cpp  window.cpp  window.hpp  window.t.cpp
src/CMake/: FindGLFW.cmake  FindGLM.cmake
src/shaders/: simple_shader.frag  simple_shader.vert
